--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sunshine</string>
     <string name="action_settings">Settings</string>
     <string name="default_weather">Today - Sunny - 88/63</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
