Added temperature unit setting.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
     <string name="pref_location_default" translatable="false">94043</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_label" translatable="false">Location</string>
+
+    <string name="pref_temperatureUnit_title" translatable="false">Temperature Units</string>
+    <string name="pref_temperatureUnit_default" translatable="false">Celsius</string>
+    <string name="pref_temperatureUnit_key" translatable="false">temperature_unit</string>
+    <string-array name="pref_temperatureUnit_entries">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+    <string-array name="pref_temperatureUnit_values">
+        <item>metric</item>
+        <item>imperial</item>
+    </string-array>
 </resources>
