--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Sunshine</string>
     <string name="action_settings">Settings</string>
     <string name="default_weather">Today - Sunny - 88/63</string>
+
     <string name="action_refresh">Refresh</string>
+    <string name="action_map_location">Map Location</string>
+
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_settings">Settings</string>
 
@@ -13,6 +16,7 @@
     <string name="pref_temperatureUnit_title" translatable="false">Temperature Units</string>
     <string name="pref_temperatureUnit_default" translatable="false">Celsius</string>
     <string name="pref_temperatureUnit_key" translatable="false">temperature_unit</string>
+    <string name="actions_share">Share</string>
     <string-array name="pref_temperatureUnit_entries">
         <item>Metric</item>
         <item>Imperial</item>
